2006-01-16  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/invokelib.h (INVOKER_MSG_MASK): New macro.
	(INVOKER_MSG_MAGIC_VERSION_MASK): Likewise.
	(INVOKER_MSG_MAGIC_OPTION_MASK): Likewise.
	(INVOKER_MSG_MAGIC_OPTION_WAIT): Likewise.
	(INVOKER_MAGIC): Renamed to ...
	(INVOKER_MSG_MAGIC): ... this. Fix all callers. Move version to ...
	(INVOKER_MSG_MAGIC_VERSION): ... here. New macro.
	(INVOKER_EXEC): Renamed to ...
	(INVOKER_MSG_EXEC): ... this. Fix all callers.
	(INVOKER_ARGS): Renamed to ...
	(INVOKER_MSG_ARGS): ... this. Fix all callers.
	(INVOKER_END): Renamed to ...
	(INVOKER_MSG_END): ... this. Fix all callers.
	(INVOKER_ACK): Renamed to ...
	(INVOKER_MSG_ACK): ... this. Fix all callers.

2006-01-16  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/invokelib.c: Add svn:keywords Id.
	* launcher/invokelib.h: Likewise.
	* launcher/invoker.1.in: Likewise.
	* launcher/invoker.c: Likewise.
	* launcher/launcher.1.in: Likewise.
	* launcher/launcher.c: Likewise.
	* launcher/ui.h: Likewise.
	* launcher/ui_gtk.c: Likewise.
	* launcher/ui_gtk.h: Likewise.
	* launcher/report.c: Likewise.
	* launcher/report.h: Likewise.
	* launcher/Makefile.am: Likewise.
	* client/client.c: Likewise.
	* client/Makefile.am: Likewise.
	* INSTALL: Likewise.
	* Makefile.am: Likewise.

2006-01-03  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac (GTK_REQUIRED, GNOMEVFS_REQUIRED, HILDON_LIBS_REQUIRED,
	HILDON_LGPL_REQUIRED): Removed variables. Replaced all users with the
	values.

2005-12-20  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_init, clean_childs, version): Declare
	as taking void as parameter.
	* launcher/invoker.c (invoker_init, get_linux_lowmem_modifier,
	version): Likewise.
	* launcher/ui_gtk.c (init_gtypes, init_gquarks): Likewise.

2005-12-01  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (clean_daemon): Use pidfilename instead of
	LAUNCHER_PIDFILE.

2005-11-30  Guillem Jover  <guillem.jover@nokia.com>
